--- a/web/html/audio.html
+++ b/web/html/audio.html
@@ -378,6 +378,15 @@
                     </li>
 
                     <li class="">
+                        <a href="ia.html">
+                            <i class="menu-icon fa fa-caret-right"></i>
+                            Interactive Analysis (Spark)
+                        </a>
+
+                        <b class="arrow"></b>
+                    </li>
+
+                    <li class="">
                         <a href="nlp.html">
                             <i class="menu-icon fa fa-caret-right"></i>
                             NLP (Spark)
