--- a/web/html/nlp.html
+++ b/web/html/nlp.html
@@ -372,6 +372,15 @@
                         <b class="arrow"></b>
                     </li>
 
+                    <li class="">
+                        <a href="ia.html">
+                            <i class="menu-icon fa fa-caret-right"></i>
+                            Interactive Analysis (Spark)
+                        </a>
+
+                        <b class="arrow"></b>
+                    </li>
+
                     <li class="active">
                         <a href="nlp.html">
                             <i class="menu-icon fa fa-caret-right"></i>
