Add udacity data cases

--- a/web/html/video.html
+++ b/web/html/video.html
@@ -526,6 +526,12 @@
                                 <td>1,828</td>
                                 <td>57.3GB</td>
                             </tr>
+                            <tr>
+                                <td>Udacity</td>
+                                <td>/data/video/udacity</td>
+                                <td>61</td>
+                                <td>0.5GB</td>
+                            </tr>
                             </tbody>
                         </table>
                     </div>
