Change sample videos

--- a/web/html/video.html
+++ b/web/html/video.html
@@ -528,9 +528,9 @@
                             </tr>
                             <tr>
                                 <td>Udacity</td>
-                                <td>/data/video/udacity</td>
-                                <td>61</td>
-                                <td>0.5GB</td>
+                                <td>/data/video/udacity/mp4/c-ud585</td>
+                                <td>86</td>
+                                <td>0.8GB</td>
                             </tr>
                             </tbody>
                         </table>
@@ -540,39 +540,16 @@
                         <div>
                             <ul class="ace-thumbnails clearfix">
                                 <li>
-                                    <video width="256" height="144" controls>
+                                    <video width="256" height="144" controls autoplay>
                                         <source type="video/mp4"
                                                 src="http://tip:14000/webhdfs/v1/data/video/ted/mp4/aaron_huey.mp4?user.name=hadoop&op=open">
                                     </video>
                                 </li>
                                 <li>
-                                    <video width="256" height="144" controls>
+                                    <video width="256" height="144" controls autoplay>
                                         <source type="video/mp4"
-                                                src="http://tip:14000/webhdfs/v1/data/video/ted/mp4/julia_bacha.mp4?user.name=hadoop&op=open">
-                                    </video>
-                                </li>
-                                <li>
-                                    <video width="256" height="144" controls>
-                                        <source type="video/mp4"
-                                                src="http://tip:14000/webhdfs/v1/data/video/ted/mp4/alex_steffen.mp4?user.name=hadoop&op=open">
-                                    </video>
-                                </li>
-                                <li>
-                                    <video width="256" height="144" controls>
-                                        <source type="video/mp4"
-                                                src="http://tip:14000/webhdfs/v1/data/video/ted/mp4/keith_barry_does_brain_magic.mp4?user.name=hadoop&op=open">
-                                    </video>
-                                </li>
-                                <li>
-                                    <video width="256" height="144" controls>
-                                        <source type="video/mp4"
-                                                src="http://tip:14000/webhdfs/v1/data/video/ted/mp4/ben_cameron_tedxyyc.mp4?user.name=hadoop&op=open">
-                                    </video>
-                                </li>
-                                <li>
-                                    <video width="256" height="144" controls>
-                                        <source type="video/mp4"
-                                                src="http://tip:14000/webhdfs/v1/data/video/ted/mp4/rory_sutherland_perspective_is_everything.mp4?user.name=hadoop&op=open">
+/data/video/udacity/mp4/c-ud585/L1-01.mp4
+                                                src="http://tip:14000/webhdfs/v1/data/video/udacity/mp4/c-ud585/L1-01.mp4?user.name=hadoop&op=open">
                                     </video>
                                 </li>
                             </ul>
