--- a/web/html/nn.html
+++ b/web/html/nn.html
@@ -512,8 +512,7 @@
 
                                 <div style="padding-left: 20px">
                                     <pre>fab r.nn_visualize:/model/r/nn.train,y1~x1+x2+x3,6:12:8,/user/hadoop/nn.png</pre>
-                                    <img src="http://tip:14000/webhdfs/v1/user/hadoop/nn.png?user.name=hadoop&op=open"
-                                         width="60%">
+                                    <img src="http://tip:14000/webhdfs/v1/user/hadoop/nn.png?user.name=hadoop&op=open"/>
                                 </div>
                             </div>
                             <!-- /.span -->
