--- a/web/html/function.html
+++ b/web/html/function.html
@@ -985,6 +985,206 @@
                                         </td>
                                         <td></td>
                                     </tr>
+                                    <tr>
+                                        <td>PDF</td>
+                                        <td>text</td>
+                                        <td class="hidden-480">330</td>
+                                        <td>Jul 20</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>PDF</td>
+                                        <td>image</td>
+                                        <td class="hidden-480">330</td>
+                                        <td>Jul 20</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>JSON</td>
+                                        <td>filter</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Jul 20</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>JSON</td>
+                                        <td>schema</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Jul 20</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>JSON</td>
+                                        <td>select</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Jul 20</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>HDFS</td>
+                                        <td>count</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Jul 20</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>HDFS</td>
+                                        <td>du</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Jul 20</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>HDFS</td>
+                                        <td>ls</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Jul 20</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>HDFS</td>
+                                        <td>text</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Jul 20</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Hive</td>
+                                        <td>sql</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Feb 14</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Spark</td>
+                                        <td>count_line</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Feb 14</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Spark</td>
+                                        <td>count_line_with</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Feb 14</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Spark</td>
+                                        <td>grep</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Feb 14</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Spark</td>
+                                        <td>head</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Feb 14</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Spark</td>
+                                        <td>sql</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Feb 14</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>R</td>
+                                        <td>nn_visualize</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Feb 14</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>R</td>
+                                        <td>sql</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Feb 14</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>R</td>
+                                        <td>word_cloud</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Feb 14</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-info">New</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>News</td>
+                                        <td>nb_train</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Feb 14</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-success">Registered</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>News</td>
+                                        <td>nb_predict</td>
+                                        <td class="hidden-480">1</td>
+                                        <td>Feb 14</td>
+                                        <td class="hidden-480">
+                                            <span class="label label-sm label-success">Registered</span>
+                                        </td>
+                                        <td></td>
+                                    </tr>
                                     </tbody>
                                 </table>
                             </div>
