Add video_search menu

--- a/web/html/flow.html
+++ b/web/html/flow.html
@@ -368,7 +368,7 @@
                     <li class="">
                         <a href="nn.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Neural Network  (R)
+                            Neural Network
                         </a>
 
                         <b class="arrow"></b>
@@ -377,7 +377,7 @@
                     <li class="">
                         <a href="word_cloud.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Word Cloud (R + Spark)
+                            Word Cloud
                         </a>
 
                         <b class="arrow"></b>
@@ -386,7 +386,7 @@
                     <li class="">
                         <a href="ia.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Interactive Analysis (Spark)
+                            Interactive Analysis
                         </a>
 
                         <b class="arrow"></b>
@@ -395,7 +395,7 @@
                     <li class="">
                         <a href="nlp.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            NLP (Spark)
+                            NLP
                         </a>
 
                         <b class="arrow"></b>
@@ -404,7 +404,7 @@
                     <li class="">
                         <a href="ocr.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            OCR (Caffe + DIGITS)
+                            OCR
                         </a>
 
                         <b class="arrow"></b>
@@ -413,7 +413,7 @@
                     <li class="">
                         <a href="image_tag.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Image Tagging (Caffe)
+                            Image Tagging
                         </a>
 
                         <b class="arrow"></b>
@@ -422,7 +422,7 @@
                     <li class="">
                         <a href="face.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Face Detection (TBD)
+                            Face Detection
                         </a>
 
                         <b class="arrow"></b>
@@ -431,7 +431,7 @@
                     <li class="">
                         <a href="speech.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Speech Recognition (TBD)
+                            Speech Recognition
                         </a>
 
                         <b class="arrow"></b>
@@ -440,7 +440,7 @@
                     <li class="">
                         <a href="document.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Text Categorization (Spark)
+                            Text Categorization
                         </a>
 
                         <b class="arrow"></b>
@@ -449,7 +449,16 @@
                     <li class="">
                         <a href="security.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Document Security (Caffe + DIGITS)
+                            Document Security
+                        </a>
+
+                        <b class="arrow"></b>
+                    </li>
+
+                    <li class="">
+                        <a href="video_search.html">
+                            <i class="menu-icon fa fa-caret-right"></i>
+                            Video Search
                         </a>
 
                         <b class="arrow"></b>
