--- a/web/html/index.html
+++ b/web/html/index.html
@@ -353,7 +353,7 @@
                     <li class="">
                         <a href="nn.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Neural Network  (R)
+                            Neural Network
                         </a>
 
                         <b class="arrow"></b>
@@ -362,7 +362,7 @@
                     <li class="">
                         <a href="word_cloud.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Word Cloud (R + Spark)
+                            Word Cloud
                         </a>
 
                         <b class="arrow"></b>
@@ -371,7 +371,7 @@
                     <li class="">
                         <a href="ia.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Interactive Analysis (Spark)
+                            Interactive Analysis
                         </a>
 
                         <b class="arrow"></b>
@@ -380,7 +380,7 @@
                     <li class="">
                         <a href="nlp.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            NLP (Spark)
+                            NLP
                         </a>
 
                         <b class="arrow"></b>
@@ -389,7 +389,7 @@
                     <li class="">
                         <a href="ocr.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            OCR (Caffe + DIGITS)
+                            OCR
                         </a>
 
                         <b class="arrow"></b>
@@ -398,7 +398,7 @@
                     <li class="">
                         <a href="image_tag.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Image Tagging (Caffe)
+                            Image Tagging
                         </a>
 
                         <b class="arrow"></b>
@@ -407,7 +407,7 @@
                     <li class="">
                         <a href="face.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Face Detection (TBD)
+                            Face Detection
                         </a>
 
                         <b class="arrow"></b>
@@ -416,7 +416,7 @@
                     <li class="">
                         <a href="speech.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Speech Recognition (TBD)
+                            Speech Recognition
                         </a>
 
                         <b class="arrow"></b>
@@ -425,7 +425,7 @@
                     <li class="">
                         <a href="document.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Text Categorization (Spark)
+                            Text Categorization
                         </a>
 
                         <b class="arrow"></b>
@@ -434,7 +434,16 @@
                     <li class="">
                         <a href="security.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Document Security (Caffe + DIGITS)
+                            Document Security
+                        </a>
+
+                        <b class="arrow"></b>
+                    </li>
+
+                    <li class="">
+                        <a href="video_search.html">
+                            <i class="menu-icon fa fa-caret-right"></i>
+                            Video Search
                         </a>
 
                         <b class="arrow"></b>
