--- a/web/html/video.html
+++ b/web/html/video.html
@@ -361,7 +361,7 @@
                     <li class="">
                         <a href="nn.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Neural Network  (R)
+                            Neural Network
                         </a>
 
                         <b class="arrow"></b>
@@ -370,7 +370,7 @@
                     <li class="">
                         <a href="word_cloud.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Word Cloud (R + Spark)
+                            Word Cloud
                         </a>
 
                         <b class="arrow"></b>
@@ -379,7 +379,7 @@
                     <li class="">
                         <a href="ia.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Interactive Analysis (Spark)
+                            Interactive Analysis
                         </a>
 
                         <b class="arrow"></b>
@@ -388,7 +388,7 @@
                     <li class="">
                         <a href="nlp.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            NLP (Spark)
+                            NLP
                         </a>
 
                         <b class="arrow"></b>
@@ -397,7 +397,7 @@
                     <li class="">
                         <a href="ocr.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            OCR (Caffe + DIGITS)
+                            OCR
                         </a>
 
                         <b class="arrow"></b>
@@ -406,7 +406,7 @@
                     <li class="">
                         <a href="image_tag.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Image Tagging (Caffe)
+                            Image Tagging
                         </a>
 
                         <b class="arrow"></b>
@@ -415,7 +415,7 @@
                     <li class="">
                         <a href="face.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Face Detection (TBD)
+                            Face Detection
                         </a>
 
                         <b class="arrow"></b>
@@ -433,7 +433,7 @@
                     <li class="">
                         <a href="document.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Text Categorization (Spark)
+                            Text Categorization
                         </a>
 
                         <b class="arrow"></b>
@@ -442,7 +442,16 @@
                     <li class="">
                         <a href="security.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Document Security (Caffe + DIGITS)
+                            Document Security
+                        </a>
+
+                        <b class="arrow"></b>
+                    </li>
+
+                    <li class="">
+                        <a href="video_search.html">
+                            <i class="menu-icon fa fa-caret-right"></i>
+                            Video Search
                         </a>
 
                         <b class="arrow"></b>
