--- a/web/html/word_cloud.html
+++ b/web/html/word_cloud.html
@@ -357,7 +357,7 @@
                     <li class="">
                         <a href="nn.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Neural Network (R)
+                            Neural Network
                         </a>
 
                         <b class="arrow"></b>
@@ -366,7 +366,7 @@
                     <li class="active">
                         <a href="word_cloud.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Word Cloud (R + Spark)
+                            Word Cloud
                         </a>
 
                         <b class="arrow"></b>
@@ -375,7 +375,7 @@
                     <li class="">
                         <a href="ia.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Interactive Analysis (Spark)
+                            Interactive Analysis
                         </a>
 
                         <b class="arrow"></b>
@@ -384,7 +384,7 @@
                     <li class="">
                         <a href="nlp.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            NLP (Spark)
+                            NLP
                         </a>
 
                         <b class="arrow"></b>
@@ -393,7 +393,7 @@
                     <li class="">
                         <a href="ocr.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            OCR (Caffe + DIGITS)
+                            OCR
                         </a>
 
                         <b class="arrow"></b>
@@ -402,7 +402,7 @@
                     <li class="">
                         <a href="image_tag.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Image Tagging (Caffe)
+                            Image Tagging
                         </a>
 
                         <b class="arrow"></b>
@@ -411,7 +411,7 @@
                     <li class="">
                         <a href="face.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Face Detection (TBD)
+                            Face Detection
                         </a>
 
                         <b class="arrow"></b>
@@ -420,7 +420,7 @@
                     <li class="">
                         <a href="speech.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Speech Recognition (TBD)
+                            Speech Recognition
                         </a>
 
                         <b class="arrow"></b>
@@ -429,7 +429,7 @@
                     <li class="">
                         <a href="document.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Text Categorization (Spark)
+                            Text Categorization
                         </a>
 
                         <b class="arrow"></b>
@@ -438,7 +438,16 @@
                     <li class="">
                         <a href="security.html">
                             <i class="menu-icon fa fa-caret-right"></i>
-                            Document Security (Caffe + DIGITS)
+                            Document Security
+                        </a>
+
+                        <b class="arrow"></b>
+                    </li>
+
+                    <li class="">
+                        <a href="video_search.html">
+                            <i class="menu-icon fa fa-caret-right"></i>
+                            Video Search
                         </a>
 
                         <b class="arrow"></b>
