Add Korean TED example

--- a/web/html/video_search.html
+++ b/web/html/video_search.html
@@ -525,6 +525,9 @@
                                     <option value="https://www.youtube.com/watch?v=mxhBaG-1cRc">
                                         https://www.youtube.com/watch?v=mxhBaG-1cRc
                                     </option>
+                                    <option value="https://www.youtube.com/watch?v=3_AZ5R2SC88">
+                                        https://www.youtube.com/watch?v=3_AZ5R2SC88
+                                    </option>
                                 </select>
 
                                 <div id="progress1">
